--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 APP_PORT=3000
+APP_DB_LIBRARY=mysql
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
