--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "moment": "^2.24.0",
+    "mysql": "^2.17.1",
     "uuid": "^3.3.3"
   }
 }
