--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "express": "^4.17.1",
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
+    "mysql2": "^1.7.0",
+    "sequelize": "^5.19.6",
     "uuid": "^3.3.3"
   }
 }
