--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mysql": "^2.17.1",
     "mysql2": "^1.7.0",
     "sequelize": "^5.19.6",
+    "sequelize-cli": "^5.5.1",
     "uuid": "^3.3.3"
   }
 }
