--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "personal-blog",
+  "name": "nodejs_boilerplate",
   "version": "1.0.0",
   "description": "Learn ES6",
   "main": "app.js",
