--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nodejs_boilerplate",
   "version": "1.0.0",
-  "description": "Learn ES6",
-  "main": "app.js",
+  "description": "Simple Nodejs Boilerplate",
+  "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel ./src/app.js --out-dir build",
