--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Learn ES6",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/.bin/mocha tests/*.js --exit",
     "build": "babel ./src/app.js --out-dir build",
     "dev": "nodemon --exec babel-node ./src/app.js"
   },
@@ -16,13 +16,20 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-watch": "^7.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "fs": "^0.0.1-security",
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
     "mysql2": "^1.7.0",
+    "path": "^0.12.7",
     "sequelize": "^5.19.6",
     "sequelize-cli": "^5.5.1",
     "uuid": "^3.3.3"
+  },
+  "devDependencies": {
+    "mocha": "^9.0.0",
+    "supertest": "^6.1.3"
   }
 }
